# conanPkg

./: .gitignore  Readme.md  build.py  configs.yaml  create_all.sh  local_create.sh  package_testing.sh
.github/workflows/: build.yml
ClangPkg/: conanbuildinfo.cmake  conanfile.py  conaninfo.txt  graph_info.json
ClangPkg/all/: CMakeLists.txt  conandata.yml  conanfile.py
ClangPkg/all/patches/12x/: 12.0.0-cmake.patch
ClangPkg/test_package/: conanfile.py
HalidePkg/: conanfile.py  conaninfo.txt  config.yml  graph_info.json
HalidePkg/all/: conanbuildinfo.cmake  conandata.yml  conanfile.py  conaninfo.txt
HalidePkg/all/patches/12x/: 12.0.0-cmake.patch
HalidePkg/test_package/: conanfile.py  example.cpp
LLVM_corePkg/: config.yml
LLVM_corePkg/all/: CMakeLists.txt  conandata.yml  conanfile.py
LLVM_corePkg/all/test_package/: conanfile.py  test_package.cpp
flatbuffersPkg/all/: conanfile.py
